--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
         <li>
         <a href ="bestanimal.html">the best animal</a>
         </li>
+        <li>
+        <a href ="draw.html">draw</a>
+        </li>
+        <li>
+        <a href ="infinitescroll.html">infinite scroll</a>
+        </li>
             </ul>
         
         <footer id=footerBoi>
