whoops it was mail-main.com not .github.io

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html id=htmlBoi>
     <head>
-    <title>mailmain.com</title>
+    <title>mailmain.github.io</title>
         <style>
             #headerBoi{
             text-align:center;
@@ -44,7 +44,7 @@
         how do you do?
         </h2>
         <p>
-        welcome to <em>mailmain.com</em>, stay if you want.
+        welcome to <em>mailmain.github.io</em>, stay if you want.
         </p>
     </header>
     <body>
